<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/facebook"
            android:title="@string/fb" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/twitter"
            android:title="@string/twt" />
        <item
            android:id="@+id/nav_linkedin"
            android:icon="@drawable/linkedin"
            android:title="@string/linkdin" />
        <item
            android:id="@+id/nav_insta"
            android:icon="@drawable/github"
            android:title="@string/ig" />

    </group>

    <item android:title="@string/recom">
        <menu>
            <item
                android:id="@+id/nav_amazon"
                android:icon="@drawable/whatsapp"
                android:title="@string/amzn" />
            <item
                android:id="@+id/nav_flipkart"
                android:icon="@drawable/telegram"
                android:title="@string/flpkrt" />
        </menu>
    </item>
</menu>
